# barbie

./: pyproject.toml
src/ie_bike_model_test/: __init__.py  model.py
