[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ie_bike_model_test"
author = "Sumant Duggal"
author-email = "sumant.duggal@student.ie.edu"
description-file = "README.md"

requires = [
"pandas",
"scikit-learn",
"joblib"
]

[tool.flit.metadata.requires-extra]
dev = [
"black"
]
